<resources>
    <string name="app_name">AlphaTour</string>
    <string name="opening_phrase">Il tuo tour a portata di mano</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Accedi</string>
    <string name="forgot_password">PASSWORD DIMENTICATA?</string>
    <string name="password_recovery_comment">Inserisci l’email del tuo account di seguito per ripristinare la tua password.</string>
    <string name="send_email">Invia email</string>
    <string name="check_email">Controlla la tua email per ripristinare la tua password </string>
    <string name="generic_error">Prova di nuovo! Qualcosa è andato storto</string>
    <string name="alternative">ACCEDI CON</string>
    <string name="new_user">Non possiedi un account?</string>
    <string name="login_failed">Accesso fallito! Email o/e password errate</string>
    <string name="user_registration">Registrazione utente</string>
    <string name="personal_data">Dati personali</string>
    <string name="account_data">Dati account</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="birth_date">Data di nascita</string>
    <string name="username">Username</string>
    <string name="required_field">Il campo non può essere vuoto</string>
    <string name="existing_username">Username non disponibile</string>
    <string name="username_constraints">Utilizzare 4 o più caratteri</string>
    <string name="existing_email">E-mail già registrata</string>
    <string name="invalid_email">E-mail non valida</string>
    <string name="password_constraints">Utilizzare 8 o più caratteri con combinazioni di lettere, numeri e simboli</string>
    <string name="create_account">Crea un account</string>
    <string name="registration_completed">Registrazione completa</string>
    <string name="registration_failed">Registrazione fallita</string>
    <string name="museum">Museo</string>
    <string name="fair">Fiera</string>
    <string name="archaeological_site">Sito Archeologico</string>
    <string name="museum_exhibition">Mostra</string>
    <string name="txt_view_String">ALPHATOUR</string>
    <string name="tv_route">CREA PERCORSO</string>
    <string name="tv_place">CREA LUOGO</string>
    <string name="tv_calendar">CALENDARIO</string>
    <string name="tv_update">MODIFICA LUOGO</string>
    <string name="tb_profile">PROFILO</string>
    <string name="tb_home">HOME</string>
    <string name="tb_routes">I MIEI PERCORSI</string>
    <string name="tb_share_path">CONDIVIDI PERCORSO</string>
    <string name="tb_logout">LOGOUT</string>
    <string name="tb_notify">NOTIFICHE</string>
    <string name="tb_update">UPDATE</string>
    <string name="im_view"> </string>
    <string name="search">Cerca</string>
    <string-array name="event_type">
        <item>Museo</item>
        <item>Mostra</item>
        <item>Sito Archeologico</item>
        <item>Fiera</item>
    </string-array>
    <string name="hello_blank_fragment">Ciao, frammento vuoto</string>
    <string name="back" translatable="false"><![CDATA[<-]]></string>
    <string name="forward" translatable="false"><![CDATA[->]]></string>
    <string name="open">Apri</string>
    <string name="close">Chiudi</string>
    <string name="current_password">Password corrente*</string>
    <string name="new_password">Nuova Password*</string>
    <string name="current_password_hint">Password corrente</string>
    <string name="new_password_hint">Nuova Password</string>
    <string name="change_password">Modifica Password</string>
    <string name="profile_data_view_error">Qualcosa è andato storto! I dati dell’utente non sono disponibili  </string>
    <string name="password_required">Password necessaria</string>
    <string name="password_required_set_error">Per favore inserisci la password attuale per autenticarti</string>
    <string name="new_password_required_set_error">Per favore inserisci la nuova password</string>
    <string name="authentication_completed">Sei autenticato con successo, ora puoi modificare la tua password!</string>
    <string name="new_same_password">La password inserita è uguale a quella attuale!</string>
    <string name="password_changed">La password è stata modificata!</string>
    <string name="photo_button">Aggiungi Foto</string>
    <string name="upload_photo">Foto aggiunta con successo!</string>
    <string name="title_activity_dashboard">dashboardActivity</string>
    <string name="navigation_drawer_open">Apri navigation drawer</string>
    <string name="navigation_drawer_close">Chiudi navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Impostazioni</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="qr_generator">Il tuo codice apparirà qui</string>
    <string name="qr_embedded">Aggiungi il nome oggetto da inserire nel QR Code</string>
    <string name="qr_generate">Genera QR Code</string>
    <string name="qr_data_missing">Per favore inserisci il codice per generare il QR Code</string>
    <string name="scann_data">I dati scansionati appariranno qui</string>
    <string name="modify_object">Modifica Oggetto</string>
    <string name="title_activity_hamburger">HamburgerActivity</string>
    <string name="profile">Profilo</string>
    <string name="date">Data</string>
    <string name="weekly">Settimanale</string>
    <string name="mon">LUN</string>
    <string name="tue">MAR</string>
    <string name="wed">MER</string>
    <string name="thu">GIO</string>
    <string name="fri">VEN</string>
    <string name="sat">SAB</string>
    <string name="sun">DOM</string>
    <string name="new_event">Nuovo Evento</string>
    <string name="start_time">Ora Inizio</string>
    <string name="time">Ora</string>
    <string name="daily">Giornaliero</string>
    <string name="change_password_text">Modifica la password dopo l’inserimento di quella corrente</string>
    <string name="object_details">Dettagli oggetto</string>
    <string name="object_title">Titolo oggetto</string>
    <string name="object_description">Descrizione oggetto</string>
    <string name="title">Titolo</string>
    <string name="description">Descrizione</string>
    <string name="photo_object">Foto oggetto</string>
    <string name="zone_of_belonging">Zona di appartenenza</string>
    <string name="delete_zone">Elimina Zona</string>
    <string name="delete_zone_text">Sei sicuro di voler eliminare la zona creata ?</string>
    <string name="cancel">Annulla</string>
    <string name="delete">Elimina</string>
    <string name="new_object">Nuovo Oggetto</string>
    <string name="add_object">Aggiungi Oggetto</string>
    <string name="created_objects">OGGETTI CREATI</string>
    <string name="new_zone">Nuova Zona</string>
    <string name="created_zone">ZONE CREATE</string>
    <string name="add_zone">Aggiungi Zona</string>
    <string name="constraints_zones">Vincoli tra zone</string>
    <string name="constraints_zones_text">Decidi in che direzione ci si può spostare tra zone</string>
    <string name="not_add_photo">Non hai aggiunto la foto!</string>
    <string name="qr_generation">QrCode generato con successo!</string>
    <string name="object_already_exists">L’oggetto che vuoi creare esiste già</string>
    <string name="wrong_password">Autenticazione fallita, password errata!</string>
    <string name="permission_text">Caro utente, la prossima schermata ti chiederà di concedere il permesso di scrittura nella memoria "
                        "del tuo dispositivo. Ciò è necessario esclusivamente per scaricare sul tuo dispositivo il percorso che hai creato"
                        ", così da poterlo avere sempre a portata di mano. Non accederemo in alcun modo ad altri file nè "
                        "divulgeremo dati a terze parti. Ti ringraziamo in anticipo !</string>
    <string name="permission_granted">Permesso accordato</string>
    <string name="permit_required">Richiesta permesso</string>
    <string name="permission_denied">Permesso negato</string>
    <string name="access_completed">Accesso compiuto</string>
    <string name="unregistered_user">Utente non registrato</string>
    <string name="object">Oggetto</string>
    <string name="dashboard_button_back">Torna alla dashboard</string>
    <string name="zones_button_next">Crea Zona</string>
    <string name="place_button_back">Torna a dati Luogo</string>
    <string name="objects_button_next">Crea Oggetti</string>
    <string name="zones_button_back">Torna a crea zone</string>
    <string name="constraints_button_next">Crea Vincoli</string>
    <string name="objects_button_back">Torna a crea oggetti</string>
    <string name="button_complete">Completa inserimenti</string>
    <string name="title_creation_1">Crea Luogo</string>
    <string name="title_creation_2">Crea Zone</string>
    <string name="title_creation_3">Crea Oggetti</string>
    <string name="title_creation_4">Crea Vincoli</string>
    <string name="element_details">Dettagli elemento</string>
    <string name="owner_zone">Zona di appartenenza</string>
    <string name="title_element">Titolo Elemento</string>
    <string name="description_element">Descrizione Elemento</string>
    <string name="photo_element">Foto Elemento</string>
    <string name="qr_code_element">QrCode Elemento</string>
    <string name="save">Salva</string>
    <string name="search_text">Luoghi, Zone ed Elementi</string>
    <string name="import_text">Non dimenticarti di copiare il link delle foto nel tuo documento !!!</string>
    <string name="import_photo_text">Qui puoi caricare le foto degli elementi, scaricare il documento vuoto, e importare il documento compilato.</string>
    <string name="item_list">Lista Elementi</string>
    <string name="zone">Zone</string>
    <string name="save_changes">Salva Modifiche</string>
    <string name="zone_data">Dati Zona</string>
</resources>