<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".calendar.EventEditActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/eventNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/start_time"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/hourEventET"
        android:layout_width="wrap_content"
        android:onClick="popTimePicker"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="date"
        android:focusableInTouchMode="false"/>

    <TextView
        android:id="@+id/eventDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/eventTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/time"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:onClick="saveEventAction"
        android:text="@string/save"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>