<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar.DailyCalendarActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:onClick="onBackButtonClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="previousDayAction"
            android:text="@string/back"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monthDayText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Feb 2022"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="20dp" />


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="nextDayAction"
            android:text="@string/forward"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/dayOfWeekTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Domenica"
        android:layout_marginBottom="20dp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:onClick="newEventAction"
        android:text="@string/new_event"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/hourListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

</LinearLayout>